; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/core/extr_message.c_usb_bulk_msg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/core/extr_message.c_usb_bulk_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { i32 }
%struct.urb = type { i32 }
%struct.usb_host_endpoint = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@USB_ENDPOINT_XFERTYPE_MASK = common dso_local global i32 0, align 4
@USB_ENDPOINT_XFER_INT = common dso_local global i32 0, align 4
@PIPE_INTERRUPT = common dso_local global i32 0, align 4
@usb_api_blocking_completion = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usb_bulk_msg(%struct.usb_device* %0, i32 %1, i8* %2, i32 %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.usb_device*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.urb*, align 8
  %15 = alloca %struct.usb_host_endpoint*, align 8
  store %struct.usb_device* %0, %struct.usb_device** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %16 = load %struct.usb_device*, %struct.usb_device** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call %struct.usb_host_endpoint* @usb_pipe_endpoint(%struct.usb_device* %16, i32 %17)
  store %struct.usb_host_endpoint* %18, %struct.usb_host_endpoint** %15, align 8
  %19 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %15, align 8
  %20 = icmp ne %struct.usb_host_endpoint* %19, null
  br i1 %20, label %21, label %24

21:                                               ; preds = %6
  %22 = load i32, i32* %11, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %21, %6
  %25 = load i32, i32* @EINVAL, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %7, align 4
  br label %74

27:                                               ; preds = %21
  %28 = load i32, i32* @GFP_KERNEL, align 4
  %29 = call %struct.urb* @usb_alloc_urb(i32 0, i32 %28)
  store %struct.urb* %29, %struct.urb** %14, align 8
  %30 = load %struct.urb*, %struct.urb** %14, align 8
  %31 = icmp ne %struct.urb* %30, null
  br i1 %31, label %35, label %32

32:                                               ; preds = %27
  %33 = load i32, i32* @ENOMEM, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %7, align 4
  br label %74

35:                                               ; preds = %27
  %36 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %15, align 8
  %37 = getelementptr inbounds %struct.usb_host_endpoint, %struct.usb_host_endpoint* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* @USB_ENDPOINT_XFERTYPE_MASK, align 4
  %41 = and i32 %39, %40
  %42 = load i32, i32* @USB_ENDPOINT_XFER_INT, align 4
  %43 = icmp eq i32 %41, %42
  br i1 %43, label %44, label %61

44:                                               ; preds = %35
  %45 = load i32, i32* %9, align 4
  %46 = and i32 %45, 1073741823
  %47 = load i32, i32* @PIPE_INTERRUPT, align 4
  %48 = shl i32 %47, 30
  %49 = or i32 %46, %48
  store i32 %49, i32* %9, align 4
  %50 = load %struct.urb*, %struct.urb** %14, align 8
  %51 = load %struct.usb_device*, %struct.usb_device** %8, align 8
  %52 = load i32, i32* %9, align 4
  %53 = load i8*, i8** %10, align 8
  %54 = load i32, i32* %11, align 4
  %55 = load i32, i32* @usb_api_blocking_completion, align 4
  %56 = load %struct.usb_host_endpoint*, %struct.usb_host_endpoint** %15, align 8
  %57 = getelementptr inbounds %struct.usb_host_endpoint, %struct.usb_host_endpoint* %56, i32 0, i32 0
  %58 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %57, i32 0, i32 1
  %59 = load i32, i32* %58, align 4
  %60 = call i32 @usb_fill_int_urb(%struct.urb* %50, %struct.usb_device* %51, i32 %52, i8* %53, i32 %54, i32 %55, i32* null, i32 %59)
  br label %69

61:                                               ; preds = %35
  %62 = load %struct.urb*, %struct.urb** %14, align 8
  %63 = load %struct.usb_device*, %struct.usb_device** %8, align 8
  %64 = load i32, i32* %9, align 4
  %65 = load i8*, i8** %10, align 8
  %66 = load i32, i32* %11, align 4
  %67 = load i32, i32* @usb_api_blocking_completion, align 4
  %68 = call i32 @usb_fill_bulk_urb(%struct.urb* %62, %struct.usb_device* %63, i32 %64, i8* %65, i32 %66, i32 %67, i32* null)
  br label %69

69:                                               ; preds = %61, %44
  %70 = load %struct.urb*, %struct.urb** %14, align 8
  %71 = load i32, i32* %13, align 4
  %72 = load i32*, i32** %12, align 8
  %73 = call i32 @usb_start_wait_urb(%struct.urb* %70, i32 %71, i32* %72)
  store i32 %73, i32* %7, align 4
  br label %74

74:                                               ; preds = %69, %32, %24
  %75 = load i32, i32* %7, align 4
  ret i32 %75
}

declare dso_local %struct.usb_host_endpoint* @usb_pipe_endpoint(%struct.usb_device*, i32) #1

declare dso_local %struct.urb* @usb_alloc_urb(i32, i32) #1

declare dso_local i32 @usb_fill_int_urb(%struct.urb*, %struct.usb_device*, i32, i8*, i32, i32, i32*, i32) #1

declare dso_local i32 @usb_fill_bulk_urb(%struct.urb*, %struct.usb_device*, i32, i8*, i32, i32, i32*) #1

declare dso_local i32 @usb_start_wait_urb(%struct.urb*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
